[package]
name = "encoders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
uniffi = "0.24.3"

[build-dependencies]
uniffi = { version="0.24.3", features = ["build"] }
uniffi_build = "0.24.3"
uniffi_bindgen = "0.24.3"